# cnn-traffic-sign-recognition

./: .gitignore  README.md  pyproject.toml
road-sign-classification/src/output/params/: best_resnet_params.json
traffic-sign-recognition/: notebook.ipynb
traffic-sign-recognition/delivery/ipynb/: notebook_2_tests-conditions-adverses.ipynb
traffic-sign-recognition/src/html/: notebook_2_tests-conditions-adverses.html
traffic-sign-recognition/src/output/params/: best_regularized_cnn_params.json
