[tool.poetry]
name = "projet-sda-deep-learning"
version = "0.1.0"
description = ""
authors = ["mriusero <marius.ayrault@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
